DLR storage is internal

--- a/config/smskannel.conf
+++ b/config/smskannel.conf
@@ -19,12 +19,12 @@ store-dump-freq = 10
 smsbox-max-pending = 1000000
 sms-resend-freq = 10
 sms-resend-retry = 30
-dlr-storage = pgsql
+dlr-storage = internal
 sms-combine-concatenated-mo = 1
 
 #---------------------------------------------
 # DLR storage configuration (PostgreSQL)
-include = "/etc/kannel/dlr.conf"
+#include = "/etc/kannel/dlr.conf"
 
 #---------------------------------------------
 # SMSC CONNECTIONS
