Tuned for local DLR storage

--- a/config/smskannel.conf
+++ b/config/smskannel.conf
@@ -30,7 +30,8 @@ sms-combine-concatenated-mo = 1
 # SMSC CONNECTIONS
 include = "/etc/kannel/smsc.d/fake.conf"
 #include = "/etc/kannel/smsc.d/smpp-etc.conf"
-
+# For test, run^
+# fakesmsc -i 0.0000000000000000001 -m 100 "100 200 text nop" "100 300 text echo this"
 #---------------------------------------------
 # SMSBOX SETUP
 group = smsbox
