Changed default configs

--- a/extended_config/smskannel.conf
+++ b/extended_config/smskannel.conf
@@ -23,25 +23,51 @@ dlr-storage = internal
 sms-combine-concatenated-mo = 1
 
 #---------------------------------------------
-# SMSC CONNECTIONS
-include = "/etc/kannel/smsc.d/fake.conf"
-# For test, run:
-# fakesmsc -i 0.0000000000000000001 -m 100 "100 200 text nop" "100 300 text echo this"
+# DLR storage configuration (PostgreSQL)
+#include = "/etc/kannel/dlr.conf"
 
 #---------------------------------------------
+# SMSC CONNECTIONS
+include = "/etc/kannel/smsc.d/fake.conf"
+#include = "/etc/kannel/smsc.d/smpp-etc.conf"
+# For test, run^
+# fakesmsc -i 0.0000000000000000001 -m 100 "100 200 text nop" "100 300 text echo this"
+#---------------------------------------------
 # SMSBOX SETUP
-include = "/etc/kannel/smsbox.d/local.conf"
+group = smsbox
+smsbox-id = smsbox
+bearerbox-host = 127.0.0.1
+sendsms-port = 13013
+log-file = "/var/log/kannel/smsbox.log"
+log-level = 2
+access-log = "/var/lib/kannel/cdr/smsbox-access.log"
+mo-recode = 1
+http-request-retry = 10
+http-queue-delay = 10
+reply-couldnotfetch = "Sorry, service is temporary unavailable"
+reply-couldnotrepresent = "Sorry, service is temporary unavailable"
+reply-requestfailed = "Sorry, service is temporary unavailable"
+reply-emptymessage = "Sorry, service is temporary unavailable"
 
 #---------------------------------------------
 # SMSBOX ROUTING
-include = "/etc/kannel/sendsms-routing.d/fake.conf"
+group = smsbox-route
+smsbox-id = smsbox
+smsc-id = "fake-smsc;smpp-etc"
 
 #---------------------------------------------
 # SEND-SMS USERS
 include = "/etc/kannel/sendsms-user.d/local.conf"
+include = "/etc/kannel/sendsms-user.d/nibelite.conf"
+include = "/etc/kannel/sendsms-user.d/netsds.conf"
 
 #---------------------------------------------
 # SERVICES
 include = "/etc/kannel/sms-service.d/default.conf"
+#include = "/etc/kannel/sms-service.d/nibelite.conf"
+#include = "/etc/kannel/sms-service.d/nsvas.conf"
 
+#---------------------------------------------
+# MODEMS
+#include = "/etc/kannel/modems.conf"
 
