--- a/extended_config/sendsms-user.d/local.conf
+++ b/extended_config/sendsms-user.d/local.conf
@@ -1,8 +1,8 @@
 #---------------------------------------------
 # User: local
 # Accessible via HTTP GET API
-# http://127.0.0.1:13013/cgi-bin/sendsms?username=local&password=local&from=1234&to=%2B380123456789&text=test+message
 #
+# http://127.0.0.1:13013/cgi-bin/sendsms?username=local&password=local&from=1234&to=%2B380123456789&text=test+message
 
 group = sendsms-user
 name = local
@@ -10,6 +10,7 @@ username = local
 password = local
 user-deny-ip = "*.*.*.*"
 user-allow-ip = "127.0.0.1"
+max-messages = 3
 concatenation = true
 omit-empty = true
 
