smskannel.conf updated for default configuration

--- a/extended_config/smskannel.conf
+++ b/extended_config/smskannel.conf
@@ -10,7 +10,7 @@ admin-allow-ip = "127.0.0.1"
 #admin-allow-ip = "127.0.0.1;192.168.1.*"
 log-file = "/var/log/kannel/kannel.log"
 log-level = 0
-access-log = "/var/lib/kannel/cdr/sms-cdr.log"
+access-log = "/var/log/kannel/sms-cdr.log"
 box-deny-ip = "*.*.*.*"
 box-allow-ip = "127.0.0.1"
 store-type = spool
@@ -20,18 +20,11 @@ smsbox-max-pending = 1000000
 sms-resend-freq = 10
 sms-resend-retry = 30
 dlr-storage = internal
-sms-combine-concatenated-mo = 1
-
-#---------------------------------------------
-# DLR storage configuration (PostgreSQL)
-#include = "/etc/kannel/dlr.conf"
 
 #---------------------------------------------
 # SMSC CONNECTIONS
 include = "/etc/kannel/smsc.d/fake.conf"
-#include = "/etc/kannel/smsc.d/smpp-etc.conf"
-# For test, run^
-# fakesmsc -i 0.0000000000000000001 -m 100 "100 200 text nop" "100 300 text echo this"
+
 #---------------------------------------------
 # SMSBOX SETUP
 group = smsbox
@@ -40,7 +33,7 @@ bearerbox-host = 127.0.0.1
 sendsms-port = 13013
 log-file = "/var/log/kannel/smsbox.log"
 log-level = 2
-access-log = "/var/lib/kannel/cdr/smsbox-access.log"
+access-log = "/var/log/kannel/smsbox-access.log"
 mo-recode = 1
 http-request-retry = 10
 http-queue-delay = 10
@@ -53,21 +46,13 @@ reply-emptymessage = "Sorry, service is temporary unavailable"
 # SMSBOX ROUTING
 group = smsbox-route
 smsbox-id = smsbox
-smsc-id = "fake-smsc;smpp-etc"
+smsc-id = "fake-smsc"
 
 #---------------------------------------------
 # SEND-SMS USERS
 include = "/etc/kannel/sendsms-user.d/local.conf"
-include = "/etc/kannel/sendsms-user.d/nibelite.conf"
-include = "/etc/kannel/sendsms-user.d/netsds.conf"
 
 #---------------------------------------------
 # SERVICES
-include = "/etc/kannel/sms-service.d/default.conf"
-#include = "/etc/kannel/sms-service.d/nibelite.conf"
-#include = "/etc/kannel/sms-service.d/nsvas.conf"
-
-#---------------------------------------------
-# MODEMS
-#include = "/etc/kannel/modems.conf"
+include = "/etc/kannel/sms-service.d/test.conf"
 
