Updated comment for "local" sendsms-user

--- a/extended_config/sendsms-user.d/local.conf
+++ b/extended_config/sendsms-user.d/local.conf
@@ -1,5 +1,7 @@
 #---------------------------------------------
 # User: local
+# Password: local
+#
 # Accessible via HTTP GET API
 #
 # http://127.0.0.1:13013/cgi-bin/sendsms?username=local&password=local&from=1234&to=%2B380123456789&text=test+message
