extended_config moved to config.

--- a/config/smskannel.conf
+++ b/config/smskannel.conf
@@ -10,7 +10,7 @@ admin-allow-ip = "127.0.0.1"
 #admin-allow-ip = "127.0.0.1;192.168.1.*"
 log-file = "/var/log/kannel/kannel.log"
 log-level = 0
-access-log = "/var/lib/kannel/cdr/sms-cdr.log"
+access-log = "/var/log/kannel/sms-cdr.log"
 box-deny-ip = "*.*.*.*"
 box-allow-ip = "127.0.0.1"
 store-type = spool
@@ -20,21 +20,33 @@ smsbox-max-pending = 1000000
 sms-resend-freq = 10
 sms-resend-retry = 30
 dlr-storage = internal
-sms-combine-concatenated-mo = 1
 
 #---------------------------------------------
 # SMSC CONNECTIONS
 include = "/etc/kannel/smsc.d/fake.conf"
-# For test, run:
-# fakesmsc -i 0.0000000000000000001 -m 100 "100 200 text nop" "100 300 text echo this"
 
 #---------------------------------------------
 # SMSBOX SETUP
-include = "/etc/kannel/smsbox.d/local.conf"
+group = smsbox
+smsbox-id = smsbox
+bearerbox-host = 127.0.0.1
+sendsms-port = 13013
+log-file = "/var/log/kannel/smsbox.log"
+log-level = 2
+access-log = "/var/log/kannel/smsbox-access.log"
+mo-recode = 1
+http-request-retry = 10
+http-queue-delay = 10
+reply-couldnotfetch = "Sorry, service is temporary unavailable"
+reply-couldnotrepresent = "Sorry, service is temporary unavailable"
+reply-requestfailed = "Sorry, service is temporary unavailable"
+reply-emptymessage = "Sorry, service is temporary unavailable"
 
 #---------------------------------------------
 # SMSBOX ROUTING
-include = "/etc/kannel/sendsms-routing.d/fake.conf"
+group = smsbox-route
+smsbox-id = smsbox
+smsc-id = "fake-smsc"
 
 #---------------------------------------------
 # SEND-SMS USERS
@@ -42,6 +54,5 @@ include = "/etc/kannel/sendsms-user.d/local.conf"
 
 #---------------------------------------------
 # SERVICES
-include = "/etc/kannel/sms-service.d/default.conf"
-
+include = "/etc/kannel/sms-service.d/test.conf"
 
